2010-08-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Apply RTEMS_CHECK_FUNC for set/get*id family of
	functions. Extend set/get*id family of checks.
	* aclocal/check-func.m4: New.

2010-08-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add checks for [get|set][e][uid,gid] family of
	functions.

2010-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libfs/src/imfs/imfs_creat.c, libfs/src/imfs/imfs_eval.c,
	libfs/src/imfs/imfs_mknod.c, libfs/src/imfs/imfs_readlink.c,
	libfs/src/pipe/fifo.c: Clean up for coverage improvements and
	formatting.

2010-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/stackchk/check.c: If this port does not allocate the
	interrupt stack, then it must always be a thread stack. Do not
	include code to print the interrupt stack information.

2010-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/base_fs.c, libcsupport/src/rtems_mkdir.c: Formatting.

2010-07-30	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1645/cpukit
	* libcsupport/src/getuid.c: Moved setuid() routine to its own
	file.
	* libcsupport/src/setuid.c: New file with setuid() routine.
	* libcsupport/src/seteuid.c: New file with seteuid() routine.

2010-07-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/fstat.c, libcsupport/src/rmdir.c,
	libfs/src/imfs/imfs.h, libfs/src/imfs/imfs_creat.c,
	libfs/src/imfs/imfs_debug.c, libfs/src/imfs/imfs_getchild.c,
	libfs/src/imfs/memfile.c: Add IMFS_assert. Clean up and remove all
	checks which are redundant with system call layer. Formatting.

2010-07-30	Gedare Bloom <giddyup44@yahoo.com>

	PR 1599/cpukit
	* posix/src/psignalunblockthread.c, posix/src/pthreadkill.c,
	rtems/src/signalsend.c, score/include/rtems/score/percpu.h,
	score/inline/rtems/score/thread.inl, score/src/thread.c,
	score/src/threadchangepriority.c, score/src/threadclearstate.c,
	score/src/threaddispatch.c, score/src/threadready.c,
	score/src/threadresume.c, score/src/threadsetstate.c,