@@ -85,7 +85,8 @@ DIRECTORY_SCAN_C_FILES += src/getcwd.c
 
 ID_C_FILES = src/getegid.c src/geteuid.c src/getgid.c src/getgroups.c \
     src/getlogin.c src/getpgrp.c src/getpid.c src/getppid.c src/getuid.c \
-    src/setuid.c src/seteuid.c src/setpgid.c src/setsid.c
+    src/seteuid.c src/setgid.c src/setuid.c src/seteuid.c src/setpgid.c \
+    src/setsid.c
 
 MALLOC_C_FILES = src/malloc_initialize.c src/calloc.c src/malloc.c \
     src/realloc.c src/_calloc_r.c src/_malloc_r.c \
